# ogbn-arxiv-node-classification

./: .gitignore  Makefile  README.md  pyproject.toml
experiments/: gcn.py  mlp.py  setup.py
nodeclf/: data.py  layers.py  models.py  util.py
