[tool.poetry]
name = "nodeclf"
version = "0.1.0"
description = "Study of doing node classification using BERT and GNNs"
authors = ["Thom Pijnenburg <tspijnenburg@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.9"
torch = "1.11.0"
ogb = "^1.3.3"
tensorboard = "^2.9.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
